# SPA

./: .env_example  .flake8  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  serializers.py  urls.py  views.py
courses/fixtures/: course_data.json  lesson_data.json
courses/migrations/: 0001_initial.py  0002_alter_course_description_alter_course_preview_and_more.py  0002_lesson_course.py  0003_add_course_owner_and_lesson_course.py  0004_alter_lesson_course.py  0005_alter_lesson_course.py  0006_lesson_owner.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: groups.json  payment_data.json  user_data.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_user_city_if_missing.py  0004_alter_user_city.py
